# Vellum

./: .env.example  Cargo.toml  README.md
crates/cli/: Cargo.toml  args.rs  error.rs  error_view.rs  migrate.rs  mod.rs  output.rs  status.rs  style.rs  ui.rs
crates/cli/src/: main.rs
crates/contracts/: Cargo.toml
crates/contracts/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/db/: Cargo.toml
crates/db/migrations/: 001_init_schema.sql
crates/db/src/: lib.rs
crates/executor/: Cargo.toml  audit.rs  dry_run.rs  error.rs  mod.rs  mode.rs  runner.rs  statement.rs  transaction.rs
crates/lock/: Cargo.toml  advisory.rs  error.rs  guard.rs  mod.rs
crates/migration/: Cargo.toml  checksum.rs  discovery.rs  drift.rs  error.rs  mod.rs  model.rs
crates/schema/: Cargo.toml
crates/schema/src/: lib.rs
crates/sql/: Cargo.toml  error.rs  mod.rs  model.rs  parser.rs  pg_query.rs
crates/sql/src/: lib.rs
crates/sql/tests/: pg_query_statement_parser.rs
crates/vellum_schema/: Cargo.toml
crates/vellum_schema/src/: column.rs  constraint.rs  enum_type.rs  index.rs  lib.rs  schema.rs  table.rs
crates/vellum_schema/src/normalize/: column.rs  constraint.rs  index.rs  mod.rs  schema.rs  table.rs
crates/vellum_sql/: Cargo.toml
crates/vellum_sql/src/: error.rs  lib.rs  parser.rs
crates/vellum_sql/tests/: parse_sql.rs
src/: main.rs
