[workspace]
resolver = "2"
members = [
  "crates/cli",
  "crates/contracts",
  "crates/core",
  "crates/migration",
  "crates/executor",
  "crates/lock",
  "crates/sql",
  "crates/schema",
  "crates/vellum_schema",
  "crates/db",
]

[package]
name = "vellum"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vellum"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
vellum-cli = { path = "crates/cli" }
