[package]
name = "vellum-cli"
version = "0.1.0"
edition = "2021"
autobins = false

[lib]
path = "mod.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
vellum-core = { path = "../core" }
vellum-db = { path = "../db" }
vellum-executor = { path = "../executor" }
vellum-migration = { path = "../migration" }
