[package]
name = "vellum-core"
version = "0.1.0"
edition = "2021"


[features]
runtime = [
    "dep:vellum-db",
    "dep:vellum-schema",
    "dep:vellum-sql",
    "dep:vellum-executor",
    "dep:vellum-migration",
    "dep:sqlx",
]

[dependencies]
vellum-contracts = { path = "../contracts" }
vellum-db = { path = "../db", optional = true }
vellum-schema = { path = "../schema", optional = true }
vellum-sql = { path = "../sql", optional = true }
vellum-executor = { path = "../executor", optional = true }
vellum-migration = { path = "../migration", optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"], optional = true }
