[package]
name = "vellum-executor"
version = "0.1.0"
edition = "2021"

[lib]
path = "mod.rs"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid"] }
uuid = { version = "1", features = ["v4"] }
vellum-migration = { path = "../migration" }
vellum-lock = { path = "../lock" }
vellum-sql = { path = "../sql" }
